Centralize flex spacer style + fix profile payment card button alignment

--- a/src/client/app/shared/header/header/header.component.scss
+++ b/src/client/app/shared/header/header/header.component.scss
@@ -1,7 +1,3 @@
-.spacer {
-	flex: 1 1 auto;
-}
-
 mat-toolbar a {
 	font-weight: bold;
 }
