--- a/src/client/app/shared/notifications/notifications/notifications.component.scss
+++ b/src/client/app/shared/notifications/notifications/notifications.component.scss
@@ -1,7 +1,3 @@
 mat-card {
 	padding: 0;
 }
-
-.spacer {
-	flex: 1 1 auto;
-}
